# Market-Data-Aggregation

./: .env  .test.env  README.md  main.py  postgrs_on_docker.yml  project_settings.py  pyproject.toml
.github/workflows/: main.yml  os_test.yml  python-3.12.yml
logs/: config.py
src/: data_collection.py  data_processing.py  utils.py
src/aiohttp/: connection.py
src/dash/: .env  connection.py  dash_plotly.py
src/db/: config.py  connection.py  crud.py  queries.py  schemas.py
src/pydantic/: models.py
tests/: .test.env
tests/crud/: conftest.py  test_db.py
tests/crud/data/: day_offs.py  queries.py
tests/data_collection/: conftest.py  test_data_collection.py
tests/data_collection/data/: dividends.py  moex_0.py  moex_1.py
